# youtube_downloader

./: .gitignore  README.md  main.py  pyproject.toml
youtube_downloader/: GUI.py  downloader.py  main.py
