[tool.poetry]
name = "youtube-downloader"
version = "0.1.0"
description = ""
authors = ["weibik <j-szkola@wp.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytube = "^15.0.0"
tqdm = "^4.66.1"
black = "^23.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
